-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0-rc1
-
None
-
Windows 7 64 bit
- Go to "Tools" -> "Options..." -> "Build & Run" -> "Kits".
- Select a Kit.
- Make the Options dialog as large as you can.
You'll still have a scrollbar:

This scrollbar moves just for a few pixels so that it is kind of pointless.
The dialog should be tuned in a way that there is no more scrollbar visible when it is this large. In Creator 3.4, this scrollbar does not appear.
| For Gerrit Dashboard: QTCREATORBUG-14750 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 121960,2 | Kit Options dialog: Remove scrollarea | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |