Kit Options dialog: Remove scrollarea

The settings page has now its own scrollarea if a settings page gets
to big, so the kits page doesn't need its own scroll area.

This behaves a bit differently.

Change-Id: I3c78abf332cec07d34350112fd66cc4d6e81dd15
Task-number: QTCREATORBUG-14750
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>